Resolves: tdf#120370 should check gradientgrid sensitivity

rather than whether listbox first entry is not selected

Change-Id: Ic3dc574f6f1a476929e89e695849756437024cee